@@ -8,7 +8,6 @@ import java.io.InputStream;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -17,7 +16,10 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.zip.ZipFile;
 
-import de.uka.ilkd.key.java.*;
+import de.uka.ilkd.key.java.ProgramElement;
+import de.uka.ilkd.key.java.Services;
+import de.uka.ilkd.key.java.SourceElement;
+import de.uka.ilkd.key.java.StatementBlock;
 import de.uka.ilkd.key.java.declaration.VariableSpecification;
 import de.uka.ilkd.key.java.expression.Assignment;
 import de.uka.ilkd.key.java.recoderext.URLDataLocation;
@@ -28,8 +30,14 @@ import de.uka.ilkd.key.java.statement.LoopStatement;
 import de.uka.ilkd.key.java.statement.MethodFrame;
 import de.uka.ilkd.key.java.visitor.JavaASTVisitor;
 import de.uka.ilkd.key.ldt.HeapLDT;
-import de.uka.ilkd.key.logic.*;
-import de.uka.ilkd.key.logic.op.*;
+import de.uka.ilkd.key.logic.JavaBlock;
+import de.uka.ilkd.key.logic.RenamingTable;
+import de.uka.ilkd.key.logic.Term;
+import de.uka.ilkd.key.logic.TermBuilder;
+import de.uka.ilkd.key.logic.op.IObserverFunction;
+import de.uka.ilkd.key.logic.op.LocationVariable;
+import de.uka.ilkd.key.logic.op.Modality;
+import de.uka.ilkd.key.logic.op.ProgramVariable;
 import de.uka.ilkd.key.proof.Node;
 import de.uka.ilkd.key.proof.Proof;
 import de.uka.ilkd.key.proof.init.JavaProfile;
@@ -47,6 +55,7 @@ import org.key_project.util.collection.*;
 
 import org.antlr.v4.runtime.IntStream;
 import org.antlr.v4.runtime.TokenSource;
+import org.checkerframework.checker.nullness.util.NullnessUtil;
 import org.jspecify.annotations.Nullable;
 import recoder.io.ArchiveDataLocation;
 import recoder.io.DataFileLocation;
@@ -139,13 +148,16 @@ public final class MiscTools {
         }
 
         if (isPermissions(services)) {
-            result.add(services.getTypeConverter().getHeapLDT().getPermissionHeap());
+            LocationVariable permissionHeap =
+                services.getTypeConverter().getHeapLDT().getPermissionHeap();
+            result.add(NullnessUtil.castNonNull(permissionHeap, "permission heap is null"));
+
         }
         return result;
     }
 
     // TODO Is rp always a program variable?
-    public static ProgramVariable getSelf(MethodFrame mf) {
+    public static @Nullable ProgramVariable getSelf(MethodFrame mf) {
         ExecutionContext ec = (ExecutionContext) mf.getExecutionContext();
         ReferencePrefix rp = ec.getRuntimeInstance();
         if (!(rp instanceof TypeReference) && rp != null) {
@@ -164,7 +176,7 @@ public final class MiscTools {
      * @return the receiver term of the passed method frame, or null if the frame belongs to a
      *         static method.
      */
-    public static Term getSelfTerm(MethodFrame mf, Services services) {
+    public static @Nullable Term getSelfTerm(MethodFrame mf, Services services) {
         ExecutionContext ec = (ExecutionContext) mf.getExecutionContext();
         ReferencePrefix rp = ec.getRuntimeInstance();
         if (!(rp instanceof TypeReference) && rp != null) {
@@ -242,7 +254,8 @@ public final class MiscTools {
         ImmutableSet<Pair<Sort, IObserverFunction>> result = DefaultImmutableSet.nil();
         if (t.op() instanceof IObserverFunction obs) {
             final Sort s = obs.isStatic() ? obs.getContainerType().getSort() : t.sub(1).sort();
-            result = result.add(new Pair<>(s, obs));
+            result =
+                result.add(new Pair<Sort, IObserverFunction>(NullnessUtil.castNonNull(s), obs));
         }
         for (Term sub : t.subs()) {
             result = result.union(collectObservers(sub));
@@ -439,7 +452,7 @@ public final class MiscTools {
      * @return The display name of the applied rule in the given {@link Node} or {@code null} if no
      *         one exists.
      */
-    public static String getRuleDisplayName(Node node) {
+    public static @Nullable String getRuleDisplayName(@Nullable Node node) {
         String name = null;
         if (node != null) {
             name = getRuleDisplayName(node.getAppliedRuleApp());
@@ -459,7 +472,7 @@ public final class MiscTools {
      * @param ruleApp The given {@link RuleApp}.
      * @return The display name of the {@link RuleApp} or {@code null} if no one exists.
      */
-    public static String getRuleDisplayName(RuleApp ruleApp) {
+    public static @Nullable String getRuleDisplayName(@Nullable RuleApp ruleApp) {
         String name = null;
         if (ruleApp != null) {
             Rule rule = ruleApp.rule();
@@ -483,7 +496,7 @@ public final class MiscTools {
      * @return The display name of the applied rule in the given {@link Node} or {@code null} if no
      *         one exists.
      */
-    public static String getRuleName(Node node) {
+    public static @Nullable String getRuleName(@Nullable Node node) {
         String name = null;
         if (node != null) {
             name = getRuleName(node.getAppliedRuleApp());
@@ -503,7 +516,7 @@ public final class MiscTools {
      * @param ruleApp The given {@link RuleApp}.
      * @return The display name of the {@link RuleApp} or {@code null} if no one exists.
      */
-    public static String getRuleName(RuleApp ruleApp) {
+    public static @Nullable String getRuleName(@Nullable RuleApp ruleApp) {
         String name = null;
         if (ruleApp != null) {
             Rule rule = ruleApp.rule();
@@ -520,7 +533,7 @@ public final class MiscTools {
      * @param proof The {@link Proof} to get its used {@link OneStepSimplifier}.
      * @return The used {@link OneStepSimplifier} or {@code null} if not available.
      */
-    public static OneStepSimplifier findOneStepSimplifier(Proof proof) {
+    public static @Nullable OneStepSimplifier findOneStepSimplifier(@Nullable Proof proof) {
         if (proof != null && !proof.isDisposed() && proof.getInitConfig() != null) {
             Profile profile = proof.getInitConfig().getProfile();
             return findOneStepSimplifier(profile);
@@ -535,7 +548,7 @@ public final class MiscTools {
      * @param profile The {@link Profile} to get its used {@link OneStepSimplifier}.
      * @return The used {@link OneStepSimplifier} or {@code null} if not available.
      */
-    public static OneStepSimplifier findOneStepSimplifier(Profile profile) {
+    public static @Nullable OneStepSimplifier findOneStepSimplifier(Profile profile) {
         if (profile instanceof JavaProfile) {
             return ((JavaProfile) profile).getOneStepSimpilifier();
         } else {
@@ -549,7 +562,8 @@ public final class MiscTools {
      * @param node the Node where to look up the actual variable (result from renaming)
      * @return The renamed variable
      */
-    public static ProgramVariable findActualVariable(ProgramVariable originalVar, Node node) {
+    public static ProgramVariable findActualVariable(ProgramVariable originalVar,
+            @Nullable Node node) {
         if (node != null) {
             do {
                 if (node.getRenamingTable() != null) {
@@ -656,10 +670,8 @@ public final class MiscTools {
     public static ImmutableList<Term> toTermList(Iterable<LocationVariable> list, TermBuilder tb) {
         ImmutableList<Term> result = ImmutableSLList.nil();
         for (var pv : list) {
-            if (pv != null) {
-                Term t = tb.var(pv);
-                result = result.append(t);
-            }
+            Term t = tb.var(pv);
+            result = result.append(t);
         }
         return result;
     }
@@ -725,10 +737,6 @@ public final class MiscTools {
      * @return an URI identifying the resource of the DataLocation
      */
     public static Optional<URI> extractURI(DataLocation loc) {
-        if (loc == null) {
-            throw new IllegalArgumentException("The given DataLocation is null!");
-        }
-
         try {
             return switch (loc.getType()) {
             case "URL" -> // URLDataLocation
@@ -856,7 +864,7 @@ public final class MiscTools {
      * @throws MalformedURLException if the string can not be converted to URL because of an unknown
      *         protocol or illegal format
      */
-    public static URL parseURL(final String input) throws MalformedURLException {
+    public static URI parseURL(@Nullable String input) throws URISyntaxException {
         if (input == null) {
             throw new NullPointerException("No URL can be created from null!");
         }
@@ -865,13 +873,14 @@ public final class MiscTools {
         String schemeSpecPart = "";
         Matcher m = URL_PATTERN.matcher(input);
         if (m.matches() && m.groupCount() == 2) {
-            scheme = m.group(1);
+            scheme = Objects.requireNonNull(m.group(1));
             schemeSpecPart = m.group(2);
+            assert schemeSpecPart != null;
         }
         switch (scheme) {
         case "URL" -> {
             // schemeSpecPart actually contains a URL again
-            return new URL(schemeSpecPart);
+            return new URI(schemeSpecPart);
         }
         case "ARCHIVE" -> {
             // format: "ARCHIVE:<filename>?<itemname>"
@@ -882,23 +891,21 @@ public final class MiscTools {
             try {
                 ZipFile zip = new ZipFile(zipName);
                 // use special method to ensure that path separators are correct
-                return getZipEntryURI(zip, itemName).toURL();
+                return getZipEntryURI(zip, itemName);
             } catch (IOException e) {
-                MalformedURLException me =
-                    new MalformedURLException(input + " does not contain a valid URL");
-                me.initCause(e);
-                throw me;
+                throw new URISyntaxException(input,
+                    "Does not contain a valid URI: " + e.getMessage());
             }
         }
         case "FILE" -> {
             // format: "FILE:<path>"
             Path path = Paths.get(schemeSpecPart).toAbsolutePath().normalize();
-            return path.toUri().toURL();
+            return path.toUri();
         }
         case "" -> {
             // only file/path without protocol
             Path p = Paths.get(input).toAbsolutePath().normalize();
-            return p.toUri().toURL();
+            return p.toUri();
         }
         default -> {
             // may still be Windows path starting with <drive_letter>:
@@ -906,11 +913,11 @@ public final class MiscTools {
                 // TODO: Theoretically, a protocol with only a single letter is allowed.
                 // This (very rare) case currently is not handled correctly.
                 Path windowsPath = Paths.get(input).toAbsolutePath().normalize();
-                return windowsPath.toUri().toURL();
+                return windowsPath.toUri();
             }
             // otherwise call URL constructor
             // if this also fails, there is an unknown protocol -> MalformedURLException
-            return new URL(input);
+            return new URI(input);
         }
         }
     }
